# hawaii-icon-theme

./: .travis.yml  CMakeLists.txt  README  README.md  optimize-svg.sh  render-symbolic.rb
cursors/hawaii/: CMakeLists.txt  CREDITS
icons/: CMakeLists.txt
icons/elegant/: CMakeLists.txt  index.theme
icons/elegant-symbolic/: CMakeLists.txt  COPYING  CREDITS
icons/hawaii/: CMakeLists.txt  index.theme
icons/hawaii-symbolic/: CMakeLists.txt
src/: CMakeLists.txt  index.theme  list-directories
src/cursors/pngs/: make-w32.sh  make.sh
src/other-symbolic/: CMakeLists.txt  COPYING-ICONS  CREDITS
src/raster/: CREDITS  copy-icons.sh
src/scalable/: CMakeLists.txt
src/symbolic/: Adwaita.AUTHORS  Breeze.CREDITS  CREDITS
themes/: CMakeLists.txt
themes/Elegant/: AUTHORS.md  CMakeLists.txt  CONTRIBUTORS.md  README.md
themes/elegant/: CMakeLists.txt  index.theme
themes/elegant-symbolic/: CMakeLists.txt
themes/kfaenza/: CMakeLists.txt
themes/kfaenza/apps/: .directory
themes/kfaenza/apps/extra-small/: .directory
themes/kfaenza/apps/small/: .directory
themes/kfaenza/devices/: .directory
themes/kfaenza/devices/small/: .directory
themes/vanish/: AUTHORS  CMakeLists.txt  README  actions.lst  apps.lst  categories.lst  devices.lst  emblems.lst  index.theme  mimetypes.lst  pixmaps.lst  places.lst  status.lst  stock.lst  unity.lst
