set(INSTALL_DIR "${CMAKE_INSTALL_THEMESDIR}/wallpapers/Nature/Aghi")

file(GLOB ACTIONS "actions/*.svg")
file(GLOB ANIMATIONS "animations/*.svg")
file(GLOB APPS "apps/*.svg")
file(GLOB DEVICES "devices/*.svg")
file(GLOB CATEGORIES "categories/*.svg")
file(GLOB EMBLEMS "emblems/*.svg")
file(GLOB MIMETYPES "mimetypes/*.svg")
file(GLOB PLACES "places/*.svg")
file(GLOB STATUS "status/*.svg")
file(GLOB STOCK "stock/*.svg")

install(FILES ${ACTIONS} DESTINATION ${CMAKE_DATA_DIR}/icons/Vanish)
install(FILES ${ANIMATIONS} DESTINATION ${CMAKE_DATA_DIR}/icons/Vanish)
install(FILES ${APPS} DESTINATION ${CMAKE_DATA_DIR}/icons/Vanish)
install(FILES ${DEVICES} DESTINATION ${CMAKE_DATA_DIR}/icons/Vanish)
install(FILES ${CATEGORIES} DESTINATION ${CMAKE_DATA_DIR}/icons/Vanish)
install(FILES ${EMBLEMSS} DESTINATION ${CMAKE_DATA_DIR}/icons/Vanish)
install(FILES ${MIMETYPES} DESTINATION ${CMAKE_DATA_DIR}/icons/Vanish)
install(FILES ${PLACES} DESTINATION ${CMAKE_DATA_DIR}/icons/Vanish)
install(FILES ${STATUSS} DESTINATION ${CMAKE_DATA_DIR}/icons/Vanish)
install(FILES ${STOCK} DESTINATION ${CMAKE_DATA_DIR}/icons/Vanish)
install(FILES index.theme DESTINATION ${CMAKE_DATA_DIR}/icons/Vanish)
