set(INSTALL_DIR ${CMAKE_INSTALL_DATADIR}/icons/Vanish)

file(GLOB ACTIONS "actions/*.svg")
file(GLOB ACTIONS_SYMBOLIC "actions/symbolic/*.svg")
file(GLOB ANIMATIONS "animations/*.svg")
file(GLOB APPS "apps/*.svg")
file(GLOB DEVICES "devices/*.svg")
file(GLOB CATEGORIES "categories/*.svg")
file(GLOB EMBLEMS "emblems/*.svg")
file(GLOB MIMETYPES "mimetypes/*.svg")
file(GLOB PLACES "places/*.svg")
file(GLOB STATUS "status/*.svg")
file(GLOB STOCK "stock/*.svg")

install(FILES ${ACTIONS} DESTINATION ${INSTALL_DIR}/actions/scalable)
install(FILES ${ACTIONS_SYMBOLIC} DESTINATION ${INSTALL_DIR}/actions/symbolic)
install(FILES ${ANIMATIONS} DESTINATION ${INSTALL_DIR}/animations/scalable)
install(FILES ${APPS} DESTINATION ${INSTALL_DIR}/apps/scalable)
install(FILES ${DEVICES} DESTINATION ${INSTALL_DIR}/devices/scalable)
install(FILES ${CATEGORIES} DESTINATION ${INSTALL_DIR}/categories/scalable)
install(FILES ${EMBLEMS} DESTINATION ${INSTALL_DIR}/emblems/scalable)
install(FILES ${MIMETYPES} DESTINATION ${INSTALL_DIR}/mimetypes/scalable)
install(FILES ${PLACES} DESTINATION ${INSTALL_DIR}/places/scalable)
install(FILES ${STATUS} DESTINATION ${INSTALL_DIR}/status/scalable)
install(FILES ${STOCK} DESTINATION ${INSTALL_DIR}/stock/scalable)
install(FILES index.theme DESTINATION ${INSTALL_DIR})
